# NAST

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
src/nast/: config.py  model.py
src/nast/modules/: attention.py  decoder.py  encoder.py  mlp.py  qgb.py
tests/: test_modules.py
